# wheeler

./: .claudeignore  .dockerignore  .gitignore  .mcp.json  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  billingtest  build_instriuciton  docker-compose.yml  pyproject.toml  wheeler.yaml  wheeler.yaml.example
.claude/: settings.json
.claude/agents/: wheeler-researcher.md  wheeler-worker.md
.claude/commands/: chat.md  execute.md  handoff.md  ingest.md  plan.md  queue.md  reconvene.md  status.md  write.md
.claude/commands/wh/: CLAUDE.md  add.md  ask.md  asta-assistant.md  asta-scholar.md  asta-theorize.md  asta.md  backup.md  bump.md  chat.md  close.md  compile.md  dev-feedback.md  discuss.md  dream.md  execute.md  graph-review.md  handoff.md  ingest.md  init.md  note.md  pair.md  pause.md  plan.md  queue.md  reconvene.md  report.md  restore.md  resume.md  status.md  triage.md  update.md  write.md
.claude/skills/wheeler-brief/: SKILL.md
.claude/skills/wheeler-brief/assets/: template.html
.claude/skills/wheeler-brief/evals/: evals.json  trigger-eval.json
.claude/skills/wheeler-brief/references/: figure-style-guide.md  mockup-svg-guide.md  spec-schema.md
.claude/skills/wheeler-brief/scripts/: render_brief.py
.claude/skills/wheeler-service-creator/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: publish.yml  release.yml
.logs/: .gitignore
docs/: CLAUDE.md  GETTING-STARTED.md  PROJECT-SPEC.md  asta-engine-spec.md  asta-next-phases.md  asta-phase4-datavoyager-and-router.md  asta-wheeler-contract-engine-plan.md  field-data-contracts.md  mission.md  prov-agent-research.md  roadmap.md  tech-stack.md
matlab/: test_integration.m  wheeler_get_responses.m  wheeler_list_data.m  wheeler_load_data.m  wheeler_run_analysis.m  wheeler_setup.m  wheeler_tree_info.m
scripts/: neo4j-setup.sh
tests/: test_act_frontmatter.py  test_adversarial.py  test_audit_service.py  test_backend_abc.py  test_backfill.py  test_backup.py  test_change_log.py  test_circuit_breaker.py  test_citations.py  test_commands.py  test_communities.py  test_config.py  test_consistency.py  test_context.py  test_context_routing.py  test_contracts.py  test_dashboard_cli.py  test_dashboard_gather.py  test_dashboard_serve.py  test_dashboard_slice.py  test_data_integration.py  test_depscanner.py  test_driver.py  test_e2e_commands.py  test_e2e_notes.py  test_embeddings.py  test_ensure_artifact.py  test_field_specs_restoring.py  test_fulltext.py  test_graph_tools.py  test_hooks.py  test_installer.py  test_integration_v03.py  test_knowledge.py  test_kuzu_backend.py  test_ledger.py  test_log_summary.py  test_mcp_server.py  test_mcp_surface_parity.py  test_merge.py  (+29 more)
tests/e2e/: conftest.py  setup_sandbox.py  test_close_protocol.py  test_custom_bag.py  test_graph_first_acts.py  test_handoff_roundtrip.py  test_plan_lifecycle.py  test_provenance_chain.py  test_workflow.py
tests/evaluation/: eval_retrieval.py  retrieval_test_set.json
tests/integrations/: test_invocation.py  test_paper_finder.py  test_registry.py
tests/integrations/asta/: test_assistant.py  test_failsafe.py  test_paper_finder.py  test_scholar_qa.py  test_semantic_scholar.py  test_theorizer.py
tests/integrations/llmsr/: test_discover.py  test_recovery.py  test_search.py
tests/regression/: conftest.py  test_issue_36.py  test_issue_37.py  test_issue_41.py  test_issue_42.py  test_issue_43.py  test_issue_44.py  test_issue_45.py  test_issue_46.py  test_issue_47.py  test_issue_48.py  test_issue_54.py  test_issue_56.py  test_issue_57.py  test_issue_58.py  test_issue_59.py  test_issue_60.py  test_issue_61.py  test_issue_62.py  test_issue_63.py  test_issue_64.py  test_issue_69.py  test_issue_70.py
wheeler/: CLAUDE.md  __init__.py  backup.py  cli.py  communities.py  config.py  consistency.py  contracts.py  depscanner.py  engine.py  installer.py  log_summary.py  mcp_core.py  mcp_mutations.py  mcp_ops.py  mcp_query.py  mcp_server.py  mcp_shared.py  merge.py  models.py  portability.py  provenance.py  request_log.py  restore.py  scaffold.py  sessions.py  task_log.py  validate_output.py  workspace.py  write_receipt.py
wheeler/_data/: mcp.json
wheeler/_data/agents/: wheeler-researcher.md  wheeler-worker.md
wheeler/_data/commands/: CLAUDE.md  add.md  ask.md  asta-assistant.md  asta-lit.md  asta-report.md  asta-scholar.md  asta-theorize.md  asta.md  bump.md  chat.md  close.md  compile.md  dev-feedback.md  discuss.md  dream.md  execute.md  graph-link.md  graph-review.md  handoff.md  ingest.md  init.md  llmsr-discover.md  note.md  pair.md  pause.md  plan.md  queue.md  reconvene.md  report.md  restore.md  resume.md  service.md  start.md  status.md  triage.md  update.md  write.md
wheeler/_data/hooks/: wheeler-check-update.js  wheeler-statusline.js
wheeler/dashboard/: __init__.py  gather.py  render.py  serve.py  template.py
wheeler/graph/: CLAUDE.md  __init__.py  backend.py  circuit_breaker.py  context.py  driver.py  kuzu_backend.py  migration_prov.py  neo4j_backend.py  provenance.py  schema.py  trace.py
wheeler/hooks/: __init__.py  auto_register.py  read_before_mutate.py  track_file_access.py
wheeler/integrations/: CLAUDE.md  __init__.py  cli.py  ingest.py  invocation.py  registry.py  services.default.yaml  services_cli.py
wheeler/integrations/asta/: CLAUDE.md  __init__.py  _marshal.py  artifacts.py  assistant.py  cli.py  ingest.py  schemas.py  scholar_qa.py  semantic_scholar.py  theorizer.py  transport.py
wheeler/integrations/llmsr/: __init__.py  cli.py  discover.py  fit.py  metrics.py
wheeler/knowledge/: CLAUDE.md  __init__.py  migrate.py  node-types.md  render.py  store.py
wheeler/modes/: __init__.py  state.py
wheeler/prompts/: __init__.py  system.py
wheeler/search/: __init__.py  backfill.py  embeddings.py  retrieval.py
wheeler/tools/: CLAUDE.md  __init__.py  cli.py  graph_tools.py
wheeler/tools/graph_tools/: __init__.py  _common.py  _field_specs.py  mutations.py  queries.py
wheeler/validation/: __init__.py  citations.py  ledger.py
(+14 files in other folders)
