[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wheeler"
version = "0.6.4"
description = "Lightweight orchestration for scientists co-working with Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Arthur Hebert"},
]
keywords = ["science", "research", "knowledge-graph", "claude", "ai", "neo4j"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "neo4j>=5.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastmcp>=2.0",
    "fastembed>=0.4",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/maxwellsdm1867/wheeler"
Repository = "https://github.com/maxwellsdm1867/wheeler.git"
Issues = "https://github.com/maxwellsdm1867/wheeler/issues"
Documentation = "https://github.com/maxwellsdm1867/wheeler/blob/main/ARCHITECTURE.md"

[project.optional-dependencies]
search = [
    "fastembed>=0.4",
    "numpy>=1.24",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "numpy>=1.24",
]

[project.scripts]
wheeler = "wheeler.tools.cli:app"
wheeler-tools = "wheeler.tools.cli:app"
wheeler-mcp = "wheeler.mcp_server:main"
wheeler-core-mcp = "wheeler.mcp_core:main"
wheeler-query-mcp = "wheeler.mcp_query:main"
wheeler-mutations-mcp = "wheeler.mcp_mutations:main"
wheeler-ops-mcp = "wheeler.mcp_ops:main"

[tool.setuptools.packages.find]
include = ["wheeler*"]

[tool.setuptools.package-data]
wheeler = ["_data/**/*.md", "_data/**/*.json", "_data/**/*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["tests/e2e/sandbox"]
