[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "wheeler"
version = "0.11.0"
description = "Reliable, trustworthy, trackable AI workflows for science. A Claude Code-native research assistant with a provenance-tracked knowledge graph."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Arthur Hong"},
    {name = "Fred Rieke"},
]
keywords = [
    "science",
    "research",
    "knowledge-graph",
    "claude",
    "claude-code",
    "ai",
    "neo4j",
    "provenance",
    "mcp",
    "reproducibility",
    "asta",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "neo4j>=5.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastmcp>=2.0",
    "fastembed>=0.4",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/maxwellsdm1867/wheeler"
Repository = "https://github.com/maxwellsdm1867/wheeler.git"
Issues = "https://github.com/maxwellsdm1867/wheeler/issues"
Documentation = "https://github.com/maxwellsdm1867/wheeler/blob/main/ARCHITECTURE.md"

[project.optional-dependencies]
# Semantic search deps are already in core; this extra is a no-op
# kept for back-compat with `pip install wheeler[search]`.
search = [
    "fastembed>=0.4",
    "numpy>=1.24",
]
# LLM-SR equation-discovery service. The vendored search core fits free
# constants with scipy; numpy is already in core. Optional so the base install
# stays lean; `wheeler llmsr` degrades to unavailable if scipy is absent. The
# test/dev extras below pull it in so the llmsr suite actually runs.
llmsr = [
    "scipy>=1.10",
]
# Test deps. Includes the llmsr extra (scipy) so the equation-discovery tests
# run rather than skip: they verify real fit/recovery numerics.
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "wheeler[llmsr]",
]
# Full developer toolchain: tests, lint, type-check, build backend, plus the
# llmsr extra so the whole suite runs locally and in the commit hooks.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "wheeler[llmsr]",
]
# Convenience aggregate for contributors.
all = [
    "wheeler[dev]",
]

[project.scripts]
wheeler = "wheeler.cli:app"
wheeler-tools = "wheeler.tools.cli:app"
wheeler-mcp = "wheeler.mcp_server:main"
wheeler-core-mcp = "wheeler.mcp_core:main"
wheeler-query-mcp = "wheeler.mcp_query:main"
wheeler-mutations-mcp = "wheeler.mcp_mutations:main"
wheeler-ops-mcp = "wheeler.mcp_ops:main"

# ---------------------------------------------------------------------------
# Hatch build configuration
# ---------------------------------------------------------------------------
# The `wheeler/_data/` tree (slash commands, agents, hooks, mcp.json template)
# is required at runtime by `wheeler.installer` and `wheeler init`. Hatchling
# includes all files inside listed packages by default, so no explicit
# package-data block is needed; the `force-include` below covers the LICENSE.

[tool.hatch.build.targets.wheel]
packages = ["wheeler"]

[tool.hatch.build.targets.sdist]
include = [
    "/wheeler",
    "/README.md",
    "/LICENSE",
    "/CITATION.cff",
    "/ARCHITECTURE.md",
    "/CONTRIBUTING.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["tests/e2e/sandbox"]

# Vendored third-party code (the LLM-SR search core, MIT/Apache-2.0) is shipped
# verbatim and is not held to Wheeler's lint/type rules. Only Wheeler's own
# adapter code around it (cli.py, fit.py, metrics.py, discover.py) is checked.
[tool.ruff]
extend-exclude = ["wheeler/integrations/llmsr/vendor"]

[tool.mypy]

[[tool.mypy.overrides]]
module = "wheeler.integrations.llmsr.vendor.*"
ignore_errors = true
